# papabalespulsemotors-editor

./: .gitignore  Papa Bales Pulse Editor.vbs  README.md  index.html  launch-editor.bat  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
agent-tools/: 5f86a463-dee1-4ef5-a463-a9677572c253.txt
electron/: brollLibrary.ts  ffmpeg-static.d.ts  main.ts  preload.ts  types.ts
scripts/: build-icon.mjs  create-desktop-shortcut.ps1  fix-icon.mjs  fix-icon.ps1  kill-dev-ports.mjs  sync-ffmpeg-binaries.mjs
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  phone_upload.rs  phone_upload_page.html
src/components/: BRollLibrary.css  BRollLibrary.tsx  BookendLibrary.tsx  ContentLibrary.css  ContentLibrary.tsx  DiagramPanel.css  DiagramPanel.tsx  ExportSettingsModal.css  ExportSettingsModal.tsx  HooksLibrary.css  HooksLibrary.tsx  ImportProgressBanner.css  ImportProgressBanner.tsx  IntrosOutrosPanel.css  IntrosOutrosPanel.tsx  IntrosPanel.tsx  LeftSidebar.css  LeftSidebar.tsx  Modal.css  Modal.tsx  OutrosPanel.tsx  PhoneUploadModal.css  PhoneUploadModal.tsx  PhoneUploadPanel.css  PhoneUploadPanel.tsx  ProjectNamingModal.css  ProjectNamingModal.tsx  RightSidebar.css  RightSidebar.tsx  TimelapsePanel.css  TimelapsePanel.tsx  Timeline.css  Timeline.tsx  VideoPreview.css  VideoPreview.tsx
src/hooks/: useVideoDropImport.ts
src/lib/: brollLibrary.ts  brollSort.ts  clipBroll.ts  contentLibrary.ts  diagramGenerate.ts  duration.ts  (+12 more)
(+8 files in other folders)
